Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26084

Possible crash in ExecuteFilter when starting a process times out

XMLWordPrintable

      In order to mimic the possible scenario shorten the timeout when starting a process inside executefilter.cpp : line 179 : method : ExecuteFilter::runHeadCommand()

      if (!m_process->waitForStarted(1000))
      

      change it to:

      if (!m_process->waitForStarted(1))
      

      Then run Creator and type in locator:

      ! echo foo
      

      Creator should crash now.

      The reason is that in case of timeout we are removing the command from the queue. But it may happen that later the process continues and finished signal is being delivered -> in this case we expect not empty queue, which is not the case.

        For Gerrit Dashboard: QTCREATORBUG-26084
        # Subject Branch Project Status CR V

            jkobus Jarek Kobus
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes